name:                diet-set
version:             0.0.1
synopsis:            Discrete Interval Encoding Tree
description:
    
license:             GPL
license-file:        LICENSE
author:              Sivert Berg
maintainer:          Sivert Berg <code@trev.is>
copyright:           Copyright (C) 2015 Sivert Berg
category:            Data Structures
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:      Data.Set.Diet
  build-depends:        base >=4.7, containers, deepseq
  hs-source-dirs:       src/
  default-language:     Haskell2010
  ghc-options:          -Wall

test-suite test
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  main-is:              test.hs
  hs-source-dirs:       tests src
  ghc-options:          -Wall -fhpc
  build-depends:        base >=4.7, containers, deepseq, template-haskell, QuickCheck
