name:                diet-set
version:             0.0.1
synopsis:            Discrete Interval Encoding Tree
description:
  An implementation of Discrete Interval Encoding Trees, described by Martin
  Erwig in /Diets for Fat Sets/. The idea is to use intervals to represent
  consecutive elements, potentially using far fewer intervals than the actual
  number of elements in the set.
license:             GPL
license-file:        LICENSE
author:              Sivert Berg
maintainer:          Sivert Berg <code@trev.is>
copyright:           Copyright (C) 2015 Sivert Berg
category:            Data Structures
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:      Data.Set.Diet
  build-depends:        base >=4.7, containers, deepseq
  hs-source-dirs:       src/
  default-language:     Haskell2010
  ghc-options:          -Wall

test-suite test
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  main-is:              test.hs
  hs-source-dirs:       tests src
  ghc-options:          -Wall -fhpc
  build-depends:        base >=4.7, containers, deepseq, template-haskell, QuickCheck
